# routes/settingsRoutes.js
@@ -4,5 +4,6 @@ const SettingsCtrl = require('../controller/settingsController');
 const verifyToken = require('../middleware/verifyToken');
 
 router.get("/settings", verifyToken, SettingsCtrl.getSettings);
+router.get("/test", SettingsCtrl.test);
 
 module.exports = router; 
